commité un générateur de tables html

--- a/project_passage.html
+++ b/project_passage.html
@@ -1,23 +1,24 @@
 <html>
 
-  <head>
+<head>
 
-    <style>
+  <style>
 
-    </style>
+  </style>
 
-    <link rel="" type="" href="">
+  <link rel="" type="" href="">
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <input type="text"></input>
+  <input type="text"></input>
 
-    <script>
+  <script src="C:\Users\tomas.duchesne\Documents\GitHub\ICS3CGtomasduchesne\tablemanager.js"></script>
+  <script>
+    createTable(0,0,2);
+  </script>
 
-    </script>
-
-  </body>
+</body>
 
 </html>
