--- a/projet_calculatrice.html
+++ b/projet_calculatrice.html
@@ -1,21 +1,26 @@
 <html>
 
-  <head>
+<head>
 
-    <style>
+  <style>
+    table {
+      width: 400px;
+      height: 400px;
+    }
+  </style>
 
-    </style>
+  <link rel="" type="" href="">
 
-    <link rel="" type="" href="">
+</head>
 
-  </head>
+<body>
 
-  <body>
+  <script src="C:\Users\tomas.duchesne\Documents\GitHub\ICS3CGtomasduchesne\tablemanager.js"></script>
+  <script>
+    createTable(3,5,400,200,2);
+    identifyCells();
+  </script>
 
-    <script>
-
-    </script>
-
-  </body>
+</body>
 
 </html>
