--- a/projet_calculatrice.html
+++ b/projet_calculatrice.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <script src="C:\Users\tomas.duchesne\Documents\GitHub\ICS3CGtomasduchesne\tablemanager.js"></script>
+  <script src="https://gist-it.appspot.com/https://raw.githubusercontent.com/Deloxo/ICS3CGtomasduchesne/master/tablemanager.js"></script>
   <script>
     createTable(3,5,400,200,2);
     identifyCells();
