--- a/projet_calculatrice.html
+++ b/projet_calculatrice.html
@@ -1,11 +1,16 @@
 <html>
 
 <head>
-
+  <meta charset="utf-8">
   <style>
-    table {
-      width: 400px;
-      height: 400px;
+    td {
+      width: 45px;
+      height: 50px;
+      border: 2px solid gray;
+    }
+
+    .écran {
+      height: 120px;
     }
   </style>
 
@@ -15,10 +20,108 @@
 
 <body>
 
-  <script src="https://gist-it.appspot.com/https://raw.githubusercontent.com/Deloxo/ICS3CGtomasduchesne/master/tablemanager.js"></script>
-  <script>
-    createTable(3,5,400,200,2);
-    identifyCells();
+  <table border="2">
+    <tr>
+      <td onclick="calculatricefonction()" class="écran" colspan="6">
+      </td>
+    </tr>
+    <tr>
+      <td onclick="calculatricefonction(1)">
+        MC
+      </td>
+      <td onclick="calculatricefonction(2)">
+        MR
+      </td>
+      <td onclick="calculatricefonction(3)">
+        M-
+      </td>
+      <td onclick="calculatricefonction(4)">
+        M+
+      </td>
+      <td onclick="calculatricefonction(5)">
+        sqrt
+      </td>
+      <td onclick="calculatricefonction(6)">
+        MU
+      </td>
+    </tr>
+    <tr>
+      <td onclick="calculatricefonction(7)">
+        +/-
+      </td>
+      <td onclick="calculatricefonction(8)">
+        7
+      </td>
+      <td onclick="calculatricefonction(9)">
+        8
+      </td>
+      <td onclick="calculatricefonction(10)">
+        9
+      </td>
+      <td onclick="calculatricefonction(11)">
+        /
+      </td>
+      <td onclick="calculatricefonction(12)">
+        %
+      </td>
+    </tr>
+    <tr>
+      <td onclick="calculatricefonction(13)">
+        ->
+      </td>
+      <td onclick="calculatricefonction(14)">
+        4
+      </td>
+      <td onclick="calculatricefonction(15)">
+        5
+      </td>
+      <td onclick="calculatricefonction(16)">
+        6
+      </td>
+      <td onclick="calculatricefonction(17)">
+        x
+      </td>
+      <td onclick="calculatricefonction(18)">
+        -
+      </td>
+    </tr>
+    <tr>
+      <td onclick="calculatricefonction(19)">
+        AC
+      </td>
+      <td onclick="calculatricefonction(20)">
+        1
+      </td>
+      <td onclick="calculatricefonction(21)">
+        2
+      </td>
+      <td onclick="calculatricefonction(22)">
+        3
+      </td>
+      <td onclick="calculatricefonction(23)" rowspan="2">
+        +
+      </td>
+      <td onclick="calculatricefonction(24)" rowspan="2">
+        =
+      </td>
+    </tr>
+    <tr>
+      <td onclick="calculatricefonction(25)">
+        C
+      </td>
+      <td onclick="calculatricefonction(26)">
+        0
+      </td>
+      <td onclick="calculatricefonction(27)">
+        00
+      </td>
+      <td onclick="calculatricefonction(28)">
+        .
+      </td>
+    </tr>
+  </table>
+
+  <script src="calculatricefonction.js">
   </script>
 
 </body>
