ajouté de la foncionalité au générateur de mot de passe

--- a/project_passage.html
+++ b/project_passage.html
@@ -18,7 +18,7 @@
   <div id="output"></div>
   <script>
     var motdepasse;
-    var caractères = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!?&*()';
+    var caractères = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!?*()';
 
     function génère() {
       var longueur = document.getElementById("contenant").value;
