changed functionality of calculator
the way the calculator was built was clunky, it was begging to be changed

--- a/projet_calculatrice.html
+++ b/projet_calculatrice.html
@@ -49,13 +49,13 @@
       <td onclick="calculatricefonction(7)">
         +/-
       </td>
-      <td onclick="calculatricefonction(8)">
+      <td onclick="calculatricefonction(8)" class="nombre n7">
         7
       </td>
-      <td onclick="calculatricefonction(9)">
+      <td onclick="calculatricefonction(9)" class="nombre n8">
         8
       </td>
-      <td onclick="calculatricefonction(10)">
+      <td onclick="calculatricefonction(10)" class="nombre n9">
         9
       </td>
       <td onclick="calculatricefonction(11)">
@@ -69,13 +69,13 @@
       <td onclick="calculatricefonction(13)">
         ->
       </td>
-      <td onclick="calculatricefonction(14)">
+      <td onclick="calculatricefonction(14)" class="nombre n4">
         4
       </td>
-      <td onclick="calculatricefonction(15)">
+      <td onclick="calculatricefonction(15)" class="nombre n5">
         5
       </td>
-      <td onclick="calculatricefonction(16)">
+      <td onclick="calculatricefonction(16)" class="nombre n6">
         6
       </td>
       <td onclick="calculatricefonction(17)">
@@ -89,13 +89,13 @@
       <td onclick="calculatricefonction(19)">
         AC
       </td>
-      <td onclick="calculatricefonction(20)">
+      <td onclick="calculatricefonction(20)" class="nombre n1">
         1
       </td>
-      <td onclick="calculatricefonction(21)">
+      <td onclick="calculatricefonction(21)" class="nombre n2">
         2
       </td>
-      <td onclick="calculatricefonction(22)">
+      <td onclick="calculatricefonction(22)" class="nombre n3">
         3
       </td>
       <td onclick="calculatricefonction(23)" rowspan="2">
@@ -121,7 +121,7 @@
     </tr>
   </table>
 
-  <script src="calculatricefonction.js">
+  <script src="C:\Users\tomas.duchesne\Documents\GitHub\ICS3CGtomasduchesne\calculatricefoncionalité.js">
   </script>
 
 </body>
