--- a/projet_calculatrice.html
+++ b/projet_calculatrice.html
@@ -26,96 +26,96 @@
       </td>
     </tr>
     <tr>
-      <td onclick="calculatricefonction(1)">
+      <td>
         MC
       </td>
-      <td onclick="calculatricefonction(2)">
+      <td>
         MR
       </td>
-      <td onclick="calculatricefonction(3)">
+      <td>
         M-
       </td>
-      <td onclick="calculatricefonction(4)">
+      <td>
         M+
       </td>
-      <td onclick="calculatricefonction(5)">
+      <td>
         sqrt
       </td>
-      <td onclick="calculatricefonction(6)">
+      <td>
         MU
       </td>
     </tr>
     <tr>
-      <td onclick="calculatricefonction(7)">
+      <td>
         +/-
       </td>
-      <td onclick="calculatricefonction(8)" class="nombre n7">
+      <td class="nombre n7">
         7
       </td>
-      <td onclick="calculatricefonction(9)" class="nombre n8">
+      <td class="nombre n8">
         8
       </td>
-      <td onclick="calculatricefonction(10)" class="nombre n9">
+      <td class="nombre n9">
         9
       </td>
-      <td onclick="calculatricefonction(11)">
+      <td>
         /
       </td>
-      <td onclick="calculatricefonction(12)">
+      <td>
         %
       </td>
     </tr>
     <tr>
-      <td onclick="calculatricefonction(13)">
+      <td>
         ->
       </td>
-      <td onclick="calculatricefonction(14)" class="nombre n4">
+      <td class="nombre n4">
         4
       </td>
-      <td onclick="calculatricefonction(15)" class="nombre n5">
+      <td class="nombre n5">
         5
       </td>
-      <td onclick="calculatricefonction(16)" class="nombre n6">
+      <td class="nombre n6">
         6
       </td>
-      <td onclick="calculatricefonction(17)">
+      <td>
         x
       </td>
-      <td onclick="calculatricefonction(18)">
+      <td>
         -
       </td>
     </tr>
     <tr>
-      <td onclick="calculatricefonction(19)">
+      <td>
         AC
       </td>
-      <td onclick="calculatricefonction(20)" class="nombre n1">
+      <td class="nombre n1">
         1
       </td>
-      <td onclick="calculatricefonction(21)" class="nombre n2">
+      <td class="nombre n2">
         2
       </td>
-      <td onclick="calculatricefonction(22)" class="nombre n3">
+      <td class="nombre n3">
         3
       </td>
-      <td onclick="calculatricefonction(23)" rowspan="2">
+      <td rowspan="2">
         +
       </td>
-      <td onclick="calculatricefonction(24)" rowspan="2">
+      <td rowspan="2">
         =
       </td>
     </tr>
     <tr>
-      <td onclick="calculatricefonction(25)">
+      <td>
         C
       </td>
-      <td onclick="calculatricefonction(26)">
+      <td>
         0
       </td>
-      <td onclick="calculatricefonction(27)">
+      <td>
         00
       </td>
-      <td onclick="calculatricefonction(28)">
+      <td>
         .
       </td>
     </tr>
